--- a/index.html
+++ b/index.html
@@ -404,468 +404,23 @@
   © Funebra™ • pScreen demo • Pure DOM scanner • <a href="https://funebra.github.io" target="_blank" rel="noopener">funebra.github.io</a>
 </footer>
 
-<script>
-/* -----------------------------------------------------------
-   Funebra™ pScreen — Pure DOM Pixel Scanner Demo (index.html)
-   - Each cell is a DOM element (.px)
-   - "Scan" builds bn-point array with ids bn0..bnN
-   - Includes: density, center-of-mass, L/R symmetry score
-   - Presets: diag, smile, ring, noise, word:BN, word:2741
------------------------------------------------------------ */
+<script type="module">
+import { pScreenCore } from "./src/pScreen.core.js";
+import { pScreenScan } from "./src/pScreen.scan.js";
+import { pScreenBN }   from "./src/pScreen.bn.js";
 
-const el = (id)=>document.getElementById(id);
-
-const screen = el("screen");
-const colsR = el("cols"), rowsR = el("rows"), cellR = el("cell"), thrR = el("thr");
-const colsVal = el("colsVal"), rowsVal = el("rowsVal"), cellVal = el("cellVal"), thrVal = el("thrVal");
-const preset = el("preset");
-
-const scanBtn = el("scanBtn"), clearBtn = el("clearBtn"), invertBtn = el("invertBtn");
-const exportBtn = el("exportBtn"), resetBtn = el("resetBtn");
-
-const out = el("out");
-const activePx = el("activePx");
-const bnCount = el("bnCount");
-const comEl = el("com");
-const symEl = el("sym");
-const densityPill = el("densityPill");
-const coordPill = el("coordPill");
-const modePill = el("modePill");
-
-let state = {
-  cols: +colsR.value,
-  rows: +rowsR.value,
-  cell: +cellR.value,
-  threshold: +thrR.value / 100,
-  // pixels store 0..1 intensity (for future image sampling); here we do 0 or 1
-  px: []
-};
-
-let isDown = false;
-let paintMode = "paint"; // paint | erase
-let lastIndex = -1;
-
-function idx(x,y){ return y*state.cols + x; }
-function xy(i){ return [i % state.cols, Math.floor(i/state.cols)]; }
-
-function setCSSGrid(){
-  screen.style.setProperty("--cols", state.cols);
-  screen.style.setProperty("--rows", state.rows);
-  screen.style.setProperty("--cell", state.cell + "px");
-}
-
-function buildGrid(keep=false){
-  setCSSGrid();
-  const total = state.cols * state.rows;
-
-  if(!keep || state.px.length !== total){
-    state.px = new Array(total).fill(0);
-  }
-
-  screen.innerHTML = "";
-  const frag = document.createDocumentFragment();
-  for(let i=0;i<total;i++){
-    const d = document.createElement("div");
-    d.className = "px";
-    d.dataset.i = i;
-    frag.appendChild(d);
-  }
-  screen.appendChild(frag);
-  paintToDOM();
-  updateMeta();
-}
-
-function paintToDOM(){
-  const nodes = screen.children;
-  for(let i=0;i<nodes.length;i++){
-    const on = state.px[i] >= state.threshold ? 1 : 0;
-    nodes[i].classList.toggle("on", !!on);
-  }
-}
-
-function setCell(i, v){
-  if(i<0 || i>=state.px.length) return;
-  state.px[i] = v ? 1 : 0;
-  const node = screen.children[i];
-  if(node){
-    node.classList.toggle("on", v >= state.threshold);
-    node.classList.add("hit");
-    setTimeout(()=>node.classList.remove("hit"), 90);
-  }
-}
-
-function toggleCell(i){
-  setCell(i, state.px[i] ? 0 : 1);
-}
-
-function clearAll(){
-  state.px.fill(0);
-  paintToDOM();
-  updateMeta();
-}
-
-function invertAll(){
-  for(let i=0;i<state.px.length;i++){
-    state.px[i] = state.px[i] ? 0 : 1;
-  }
-  paintToDOM();
-  updateMeta();
-}
-
-function updateMeta(){
-  const total = state.px.length;
-  const active = state.px.reduce((a,b)=>a + (b>=state.threshold?1:0), 0);
-  const density = total ? (active/total)*100 : 0;
-  activePx.textContent = active;
-  densityPill.textContent = `Density: ${density.toFixed(2)}%`;
-}
-
-function setModeFromEvent(e){
-  // Shift => erase, else paint; Ctrl => invert single cell on drag
-  paintMode = e.shiftKey ? "erase" : "paint";
-  modePill.textContent = "Mode: " + (paintMode==="erase" ? "Erase" : "Paint");
-}
-
-function handlePointerAt(target, e){
-  if(!target || !target.classList.contains("px")) return;
-  const i = +target.dataset.i;
-  if(i === lastIndex) return;
-  lastIndex = i;
-
-  const [x,y] = xy(i);
-  coordPill.textContent = `x: ${x}  y: ${y}`;
-
-  if(e.ctrlKey){
-    toggleCell(i);
-  }else{
-    setCell(i, paintMode==="paint" ? 1 : 0);
-  }
-  updateMeta();
-}
-
-screen.addEventListener("pointerdown", (e)=>{
-  isDown = true;
-  lastIndex = -1;
-  screen.setPointerCapture(e.pointerId);
-  setModeFromEvent(e);
-  handlePointerAt(e.target, e);
-});
-screen.addEventListener("pointermove", (e)=>{
-  if(!isDown) return;
-  setModeFromEvent(e);
-  handlePointerAt(e.target, e);
-});
-screen.addEventListener("pointerup", ()=>{
-  isDown = false;
-  lastIndex = -1;
+/* Boot sequence */
+const app = pScreenCore({
+  screen: document.getElementById("screen")
 });
 
-screen.addEventListener("mousemove", (e)=>{
-  const t = e.target;
-  if(t && t.classList.contains("px")){
-    const i = +t.dataset.i;
-    const [x,y] = xy(i);
-    coordPill.textContent = `x: ${x}  y: ${y}`;
-  }
-});
+pScreenScan(app);
+pScreenBN(app);
 
-function scanToBN(){
-  const bn = [];
-  const total = state.px.length;
-  let sx=0, sy=0, count=0;
-
-  for(let i=0;i<total;i++){
-    const val = state.px[i];
-    if(val >= state.threshold){
-      const [x,y] = xy(i);
-      // bn ids always "bnN" (Funebra memory)
-      bn.push({
-        id: "bn" + bn.length,
-        x, y,
-        v: val,
-        // easy mapping into a screen plane later:
-        // pxX: x*state.cell, pxY: y*state.cell
-      });
-      sx += x;
-      sy += y;
-      count++;
-    }
-  }
-
-  // Center of mass
-  const cx = count ? (sx/count) : 0;
-  const cy = count ? (sy/count) : 0;
-
-  // Simple left-right symmetry: compare mirrored cells
-  const sym = symmetryLR();
-
-  bnCount.textContent = bn.length;
-  comEl.textContent = count ? `${cx.toFixed(2)}, ${cy.toFixed(2)}` : "—";
-  symEl.textContent = count ? `${(sym*100).toFixed(1)}%` : "—";
-
-  const payload = {
-    meta:{
-      engine:"Funebra™ pScreen",
-      mode:"pure-dom",
-      cols: state.cols,
-      rows: state.rows,
-      cell: state.cell,
-      threshold: state.threshold,
-      timestamp: new Date().toISOString()
-    },
-    stats:{
-      activePixels: count,
-      density: total ? count/total : 0,
-      centerOfMass:{x: cx, y: cy},
-      symmetryLR: sym
-    },
-    bnPoints: bn
-  };
-
-  out.textContent = JSON.stringify(payload, null, 2);
-  return payload;
-}
-
-function symmetryLR(){
-  // 1.0 = perfect symmetry. Compare L and mirrored R for each row.
-  const C = state.cols, R = state.rows;
-  if(C < 2) return 1;
-
-  let matches = 0, checks = 0;
-  const thr = state.threshold;
-
-  for(let y=0;y<R;y++){
-    for(let x=0;x<Math.floor(C/2);x++){
-      const a = state.px[idx(x,y)] >= thr;
-      const b = state.px[idx(C-1-x,y)] >= thr;
-      checks++;
-      if(a === b) matches++;
-    }
-  }
-  return checks ? (matches/checks) : 1;
-}
-
-/* ---------------- Presets ---------------- */
-
-function applyPreset(kind){
-  clearAll();
-
-  const C = state.cols, R = state.rows;
-  const midX = (C-1)/2, midY = (R-1)/2;
-
-  const set = (x,y)=>{ if(x>=0 && x<C && y>=0 && y<R) state.px[idx(x,y)] = 1; };
-
-  if(kind === "diag"){
-    const n = Math.min(C,R);
-    for(let i=0;i<n;i++) set(i,i);
-  }
-
-  if(kind === "smile"){
-    // Eye-ish smile grid: two eyes + curved mouth
-    // eyes
-    set(Math.floor(C*0.30), Math.floor(R*0.35));
-    set(Math.floor(C*0.70), Math.floor(R*0.35));
-    // mouth arc
-    for(let x=0;x<C;x++){
-      const dx = (x-midX)/(C/2);
-      const y = Math.round(midY + (dx*dx)* (R*0.18));
-      if(y>=0 && y<R) set(x, y);
-    }
-    // cheeks
-    set(Math.floor(C*0.22), Math.floor(R*0.55));
-    set(Math.floor(C*0.78), Math.floor(R*0.55));
-  }
-
-  if(kind === "ring"){
-    const rad = Math.min(C,R)*0.33;
-    for(let y=0;y<R;y++){
-      for(let x=0;x<C;x++){
-        const dx = x-midX, dy = y-midY;
-        const d = Math.sqrt(dx*dx + dy*dy);
-        if(Math.abs(d - rad) < 0.6) set(x,y);
-      }
-    }
-  }
-
-  if(kind === "noise"){
-    for(let i=0;i<state.px.length;i++){
-      state.px[i] = (Math.random() > 0.75) ? 1 : 0;
-    }
-  }
-
-  if(kind.startsWith("word:")){
-    const word = kind.split(":")[1] || "BN";
-    drawWord(word);
-  }
-
-  paintToDOM();
-  updateMeta();
-}
-
-function drawWord(text){
-  // Minimal 5x7 bitmap font (only what we need)
-  const font = {
-    "B":[
-      "11110",
-      "10001",
-      "11110",
-      "10001",
-      "10001",
-      "10001",
-      "11110",
-    ],
-    "N":[
-      "10001",
-      "11001",
-      "10101",
-      "10011",
-      "10001",
-      "10001",
-      "10001",
-    ],
-    "2":[
-      "11110",
-      "00001",
-      "00001",
-      "11110",
-      "10000",
-      "10000",
-      "11111",
-    ],
-    "7":[
-      "11111",
-      "00001",
-      "00010",
-      "00100",
-      "01000",
-      "01000",
-      "01000",
-    ],
-    "4":[
-      "10010",
-      "10010",
-      "10010",
-      "11111",
-      "00010",
-      "00010",
-      "00010",
-    ],
-    "1":[
-      "00100",
-      "01100",
-      "00100",
-      "00100",
-      "00100",
-      "00100",
-      "01110",
-    ]
-  };
-
-  const C = state.cols, R = state.rows;
-  const chars = (""+text).toUpperCase().split("").filter(c=>font[c]);
-  if(!chars.length) return;
-
-  const charW = 5, charH = 7, gap = 1;
-  const totalW = chars.length*charW + (chars.length-1)*gap;
-  const startX = Math.floor((C - totalW)/2);
-  const startY = Math.floor((R - charH)/2);
-
-  const set = (x,y)=>{ if(x>=0 && x<C && y>=0 && y<R) state.px[idx(x,y)] = 1; };
-
-  let x0 = startX;
-  for(const ch of chars){
-    const bmp = font[ch];
-    for(let y=0;y<charH;y++){
-      for(let x=0;x<charW;x++){
-        if(bmp[y][x] === "1") set(x0+x, startY+y);
-      }
-    }
-    x0 += charW + gap;
-  }
-}
-
-/* ---------------- Wiring UI ---------------- */
-
-function syncUI(){
-  colsVal.textContent = state.cols;
-  rowsVal.textContent = state.rows;
-  cellVal.textContent = state.cell;
-  thrVal.textContent = state.threshold.toFixed(2);
-}
-
-colsR.addEventListener("input", ()=>{
-  state.cols = +colsR.value;
-  syncUI();
-});
-rowsR.addEventListener("input", ()=>{
-  state.rows = +rowsR.value;
-  syncUI();
-});
-cellR.addEventListener("input", ()=>{
-  state.cell = +cellR.value;
-  syncUI();
-  setCSSGrid();
-});
-thrR.addEventListener("input", ()=>{
-  state.threshold = +thrR.value / 100;
-  syncUI();
-  paintToDOM();
-  updateMeta();
-});
-
-colsR.addEventListener("change", ()=>buildGrid(true));
-rowsR.addEventListener("change", ()=>buildGrid(true));
-
-preset.addEventListener("change", ()=>{
-  const v = preset.value;
-  if(v !== "none") applyPreset(v);
-  preset.value = "none";
-});
-
-scanBtn.addEventListener("click", scanToBN);
-clearBtn.addEventListener("click", ()=>{
-  clearAll();
-  out.textContent = "";
-  bnCount.textContent = "0";
-  comEl.textContent = "—";
-  symEl.textContent = "—";
-});
-invertBtn.addEventListener("click", ()=>{
-  invertAll();
-  out.textContent = "";
-});
-resetBtn.addEventListener("click", ()=>{
-  // full rebuild to defaults (keeps current slider values)
-  buildGrid(false);
-  out.textContent = "";
-  bnCount.textContent = "0";
-  comEl.textContent = "—";
-  symEl.textContent = "—";
-});
-
-exportBtn.addEventListener("click", ()=>{
-  const payload = scanToBN();
-  const blob = new Blob([JSON.stringify(payload, null, 2)], {type:"application/json"});
-  const url = URL.createObjectURL(blob);
-  const a = document.createElement("a");
-  a.href = url;
-  a.download = "pscreen-bn-scan.json";
-  document.body.appendChild(a);
-  a.click();
-  a.remove();
-  setTimeout(()=>URL.revokeObjectURL(url), 1000);
-});
-
-/* init */
-syncUI();
-buildGrid(false);
-out.textContent =
-`{
-  "meta": { "engine": "Funebra™ pScreen", "mode": "pure-dom" },
-  "hint": "Draw on the grid → click Scan → bn-points appear here."
-}`;
-updateMeta();
+/* Expose for console / demos */
+window.pScreen = app;
 </script>
+
 </body>
 </html>
 
