--- a/demos/grid.html
+++ b/demos/grid.html
@@ -1,1 +1,110 @@
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>pScreen — grid module test</title>
+<style>
+  body{margin:0;background:#070a0f;color:#e8eef6;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
+  .wrap{max-width:1100px;margin:0 auto;padding:18px;display:grid;gap:14px;grid-template-columns:1.1fr .9fr}
+  @media(max-width:980px){.wrap{grid-template-columns:1fr}}
+  .card{background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.10);border-radius:16px;overflow:hidden}
+  .hd{padding:12px 14px;border-bottom:1px solid rgba(255,255,255,.10);display:flex;justify-content:space-between;align-items:center}
+  .bd{padding:14px}
+  .btns{display:flex;flex-wrap:wrap;gap:10px;margin-top:10px}
+  button{border:1px solid rgba(255,255,255,.12);background:rgba(255,255,255,.08);color:#e8eef6;padding:10px 14px;border-radius:999px;cursor:pointer;font-weight:700}
+  button.primary{background:#15b6ff;color:#031018;border:none}
+  select{width:100%;padding:10px;border-radius:12px;border:1px solid rgba(255,255,255,.12);background:rgba(0,0,0,.25);color:#e8eef6}
+  pre{margin:0;white-space:pre-wrap;word-break:break-word;background:rgba(0,0,0,.35);border:1px solid rgba(255,255,255,.10);border-radius:14px;padding:10px;max-height:340px;overflow:auto}
+  #screen{
+    --cols:32;--rows:18;--cell:18px;
+    display:grid;
+    grid-template-columns:repeat(var(--cols),var(--cell));
+    grid-template-rows:repeat(var(--rows),var(--cell));
+    gap:2px;padding:12px;border-radius:16px;border:1px solid rgba(255,255,255,.10);
+    background:rgba(0,0,0,.35);overflow:auto;user-select:none;touch-action:none;place-content:center
+  }
+  .px{width:var(--cell);height:var(--cell);border-radius:6px;background:rgba(255,255,255,.03);border:1px solid rgba(255,255,255,.06);position:relative}
+  .px.on{background:rgba(21,182,255,.22);border-color:rgba(21,182,255,.42)}
+  .px.on::after{content:"";position:absolute;inset:3px;border-radius:5px;background:rgba(21,182,255,.35)}
+  .pill{display:inline-block;padding:6px 10px;border-radius:999px;border:1px solid rgba(255,255,255,.10);background:rgba(255,255,255,.04);color:#93a4b8;font-size:12px}
+  .row{display:flex;gap:10px;flex-wrap:wrap;align-items:center;justify-content:space-between;margin-top:10px}
+</style>
+</head>
+<body>
+
+<div class="wrap">
+  <section class="card">
+    <div class="hd">
+      <b>pScreen Surface (module test)</b>
+      <span class="pill" id="modePill">Mode: Paint</span>
+      <span class="pill" id="coordPill">x: — y: —</span>
+      <span class="pill" id="densityPill">Density: —%</span>
+    </div>
+    <div class="bd">
+      <div id="screen" aria-label="pScreen grid"></div>
+      <div class="row">
+        <span class="pill">drag = paint • Shift = erase • Ctrl = invert</span>
+        <span class="pill">Threshold: <span id="thrVal">0.50</span></span>
+      </div>
+    </div>
+  </section>
+
+  <aside class="card">
+    <div class="hd"><b>Controls</b><span class="pill">core + scan + bn + presets</span></div>
+    <div class="bd">
+      <label class="pill" style="display:block;margin-bottom:8px">Pattern</label>
+      <select id="preset">
+        <option value="none">— none —</option>
+        <option value="diag">Diagonal</option>
+        <option value="smile">Smile (Eye-ish)</option>
+        <option value="ring">Ring</option>
+        <option value="noise">Noise</option>
+        <option value="word:BN">Word: BN</option>
+        <option value="word:2741">Word: 2741</option>
+      </select>
+
+      <div class="btns">
+        <button class="primary" id="scanBtn">Scan → bn</button>
+        <button id="clearBtn">Clear</button>
+        <button id="invertBtn">Invert</button>
+        <button id="exportBtn">Export JSON</button>
+        <button id="exportFSCBtn">Export FSC</button>
+      </div>
+
+      <div class="row">
+        <span class="pill">Active: <span id="activePx">0</span></span>
+        <span class="pill">bn: <span id="bnCount">0</span></span>
+        <span class="pill">COM: <span id="com">—</span></span>
+        <span class="pill">SYM: <span id="sym">—</span></span>
+      </div>
+
+      <div style="height:10px"></div>
+      <pre id="out">{ "hint": "Choose preset or draw → Scan → output" }</pre>
+    </div>
+  </aside>
+</div>
+
+<script type="module">
+import { pScreenCore } from "../src/pScreen.core.js";
+import { pScreenScan } from "../src/pScreen.scan.js";
+import { pScreenBN } from "../src/pScreen.bn.js";
+import { pScreenPresets } from "../src/pScreen.presets.js";
+
+const app = pScreenCore({ screen: document.getElementById("screen") });
+pScreenScan(app);
+pScreenBN(app);
+pScreenPresets(app);
+
+// Simple: add FSC export button
+document.getElementById("exportFSCBtn").addEventListener("click", () => {
+  app.scan?.();
+  app.bn?.downloadFSC?.("pscreen.fsc");
+});
+
+window.pScreen = app;
+</script>
+
+</body>
+</html>
 
