--- a/demos/index.html
+++ b/demos/index.html
@@ -103,7 +103,7 @@
     [data-export-ignore] { user-select: none; }
   </style>
 
-  <script src="https://funebra.github.io/math-art-engine/script.module.js"></script>
+  <script src="https://funebra.github.io/math-art-engine/script.module.js" type="module"></script>
   <!-- Legacy libs (HTTPS only). If some are unused, feel free to remove. -->
   <script src="https://plabs.at.ua/game/aftermath.1.6.4/tool-2022-11-22-13-03-Tir.js" defer></script>
   <script src="https://plabs.at.ua/res/math.js" defer></script>
